diss: typos Frank first pages

--- a/diss.tex
+++ b/diss.tex
@@ -37,7 +37,7 @@
       {14.08.~2013}                              % Tag der Abgabe
       {Prof.\ Dr.\ Thomas Augustin}            % Name des Erstgutachters
       {Prof.\ Dr.\ Frank P.A.\ Coolen}         % Name des Zweitgutachters
-      {}                                       % Datum der muendlichen Pruefung
+      {25.10.~2013}                            % Datum der muendlichen Pruefung
 
 
   \tableofcontents
@@ -53,7 +53,7 @@
   \markboth{List of Tables}{List of Tables}
   \cleardoublepage
 
-  \markboth{Summary}{Summary}
+  \markboth{Abstract}{Abstract}
   \include{summary}
 
   \markboth{Zusammenfassung}{Zusammenfassung}
