--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,7 @@
 \label{cha:intro}
 
 In this introductory chapter, we will first deal with some preliminaries in Section~\ref{sec:preliminaries},
-where will give an overview on the contents of this thesis,
+where we will give an overview on the contents of this thesis,
 declare the sources these contents are based on,
 and present some notational conventions.
 In Section~\ref{sec:fundamentals}, we will discuss some basic fundamentals
