--- a/summary.tex
+++ b/summary.tex
@@ -37,7 +37,7 @@ giving a false certainty in posterior inferences.
 %This conflict should show up in posterior inferences, alerting the analyst and, e.g., lead to a revision of prior specifications.
 
 Here, imprecise or interval probability methods offer sound strategies to counter this issue,
-by mapping parameter uncertainty over \emph{sets} of priors resp.\ posteriors instead over single distributions.
+by mapping parameter uncertainty over \emph{sets} of priors resp.\ posteriors instead of over single distributions.
 This approach is supported by recent research in economics, risk analysis and artificial intelligence,
 corroborating the multi-dimensional nature of uncertainty and concluding that standard probability theory
 as founded on Kolmogorov's or de Finetti's framework may be too restrictive,
