diss: order of itip editors

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -182,8 +182,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
     keywords = {disssource,defensethesis},
 }
 
@@ -192,8 +192,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @misc{luck-package,
