--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -808,8 +808,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-structural,
@@ -819,8 +819,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-special,
@@ -830,8 +830,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-other,
@@ -841,8 +841,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-decision,
@@ -853,8 +853,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-ipgms,
@@ -865,8 +865,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-classification,
@@ -876,8 +876,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-computation,
@@ -888,8 +888,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
 @incollection{itip-elicitation,
@@ -899,7 +899,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
-    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
+    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
 }
 
