diss: typos Frank in intro

--- a/intro.tex
+++ b/intro.tex
@@ -279,7 +279,7 @@ $f(x)$, $p(\theta)$.
 This distinction for densities on parameters or samples
 is not maintained for the associated probability measures and cumulative distribution functions:
 cumulative distribution functions are denoted by uppercase letter $\cdf$,
-e.g., $\cdf(x) := \int_{-\infty}^x f(u) \dd u$, or $\cdf(\theta) := \int_{-\infty}^\theta f(\psi) \dd \psi$;
+e.g., $\cdf(x) := \int_{-\infty}^x f(u) \dd u$, or $\cdf(\theta) := \int_{-\infty}^\theta p(\psi) \dd \psi$;
 probability measures, e.g.\ for subsets $A$ of a sample space $\Omega$,
 or a subset $\Theta_1$ of the parameter space $\Theta$,
 are denoted by uppercase $\p$,
@@ -289,7 +289,7 @@ or $\p(\Theta_1) = \int_{\Theta_1} p(\theta) \dd \theta$ for continuous $\Theta$
 Expectation and variance of a random quantity $X$ are denoted by $\E[X]$ and $\V(X)$, respectively.
 In a Bayesian setting, quantities identifying the distribution
 (with respect to which expectation and variance are calculated)
-are added in the argument, seperated by a vertical line, as in $f(x\mid\theta)$, or $\E[\theta\mid\nz, \yz]$.
+are added in the argument, separated by a vertical line, as in $f(x\mid\theta)$, or $\E[\theta\mid\nz, \yz]$.
 
 Other notational conventions are declared upon introduction of the concepts they are representing.
 
@@ -610,7 +610,7 @@ but it will be formulated in terms of parameters in a Bayesian setting here.
 
 We distinguish two groups of inferences, namely
 \begin{enumerate}
-\item static conclusions and
+\item static conclusions, and
 \item predictive conclusions.%
 %\footnote{Static conclusions are still more common in statistical applications.
 %In the light of the success of procedures from machine learning in statistics, the predictive view,
@@ -1175,7 +1175,7 @@ involving common cause failure of diesel generators.
 In this case, all 12 available diesel generators at reactors 1 to 6 
 ceased to function due to a tsunami wave flooding the rooms where they were installed \parencite[p.~31]{2011:iaea::report}.
 The tsunami wave had been caused by the T\={o}hoku earthquake \parencite[e.g.,][]{2012:ritsema},
-which had promted the reactors to shutdown automatically, and in doing so,
+which had prompted the reactors to shutdown automatically, and in doing so,
 switching to the diesel generators for power supply.%
 \footnote{All six off-site power lines were cut off, also due to the earthquake \parencite[p.~31]{2011:iaea::report}.}
 
