diss: typos Frank in chapter 3.2

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -3,7 +3,7 @@
 
 
 In Section~\ref{sec:generalmodel},
-we have discussed a specific type of models based on parametrically constructed sets of conjugate priors,
+we have discussed a specific class of models based on parametrically constructed sets of conjugate priors,
 described important properties of inferences based on this class in general terms,
 and illustrated the potential of generalised Bayesian inference methods
 for the situations of prior near-ignorance and substantial prior information.
@@ -201,7 +201,7 @@ that are based on a number of conjugate and non-conjugate sets of priors.
 \label{sec:alternatives:coolen}
 
 \textcite{1993:coolen} proposed an interesting model for sample distributions
-from the one-parameter exponential family using the density ration class.
+from the one-parameter exponential family using the density ratio class.
 In this model, the prior bounding functions $l(\vartheta)$ and $u(\vartheta)$ from \eqref{eq:densityratioclass}
 are linked through the relation $u(\vartheta) = c_0 \cdot l(\vartheta)$,
 where $c_0 \ge 1$ is independent of $\vartheta$.
@@ -409,7 +409,7 @@ Here, it seems to result primarily from a kind of `curse of dimension',
 but may also be due to the fact that, as noted above, the magnitude of $\mathcal{M}$ does not decrease with $n$
 for density ratio classes updated via the Generalised Bayes' Rule.
 
-Although being quite attractive for problems with a one-dimensional parameter
+Although quite attractive for problems with a one-dimensional parameter
 (or where there is sufficient information to model further parameters by precise priors),
 the model is currently inadequate for higher-dimensional problems.
 This could be adressed through the development of multivariate elicitation procedures,
