diss: typos Frank in chapter 3.5

--- a/isipta11.tex
+++ b/isipta11.tex
@@ -1053,14 +1053,14 @@ that would lead to more complications. If the individual models
 are coherent lower and upper probabilities, i.e.\ provide separately
 coherent inferences, then the combined inference via weighted
 averaging and taking the lower and upper envelopes is also
-separately coherent.\footnote{This follows, e.g., from\textcite[\S 2.6.3f]{1991:walley}.}
+separately coherent.\footnote{This follows, e.g., from \textcite[\S 2.6.3f]{1991:walley}.}
 
 In applications, it is often important to determine a sample size
 (or more general design issues) before data are collected. If one
 uses a model that can react to prior-data conflict, this is likely
 to lead to a larger data requirement. One very cautious approach is to choose $n$ such that the maximum possible resulting
 imprecision does not exceed a chosen threshold. In the models
-presented in this paper, this maximum imprecision will always occur
+presented here, this maximum imprecision will always occur
 for either $s=0$ or $s=n$, whichever is further away from the TPDA.
 In such cases, a preliminary study has shown an attractive feature if one can actually
 sample sequentially. If some data are obtained with success proportion close to $s^i/n^i$, %then
