diss: typos Frank in chapter 4

--- a/concluding.tex
+++ b/concluding.tex
@@ -172,7 +172,7 @@ such complex prior shapes can be difficult as well.
 In general, %these
 models based on sets of canonical conjugate priors form, in our view,
 a `sweet spot' in the realm of (imprecise) statistical models,
-by allowing a sophisticated model behaviour
+by allowing sophisticated model behaviour
 combined with easy elicitation and computation.
 %More verbosely ,
 In particular,
@@ -475,7 +475,7 @@ the models discussed in this thesis rely on a precise sampling model,
 but the generalised Bayesian inference framework also allows for imprecise sampling models
 \parencite[see, in particular,][\S 8.5]{1991:walley},
 also discussed under the notion of \emph{likelihood robustness} \parencite[e.g.,][]{2000:shyamalkumar} in the robust Bayesian framework,
-not idealising the the sampling model in the same way as we ceased to idealise the prior model.
+not idealising the sampling model in the same way as we ceased to idealise the prior model.
 %This could be done, as mentioned in Section~\ref{sec:insights}, % !!! coarse Data, nicht imprecise sampling model !!!
 %in an analogous way to \textcite{2007:utkinaugustin} and \textcite{2009:Troffaes:Coolen},
 %allowing to consider coarse or imprecise data adequately in the model,
@@ -554,7 +554,7 @@ In fact, such a parametrisation has been developed by Mi\c{k}elis Bickis (\cite*
 and he is currently preparing a manuscript elaborating the details of his findings.
 In this parametrisation, a canonical prior is represented by a coordinate $(\ezz,\eoz)$,
 where $\eoz$ replaces the main prior parameter $\yz$,
-while $\ezz$ is just a different name for $\nz$.***%
+while $\ezz$ is just a shifted version of $\nz$.%
 %there, update step for $\nz$ is the same, and shift for parameter replacing $\yz$ is the same for all. 
 \footnote{This parametrisation is described in more detail in Section~\ref{sec:boatshape},
 along with some first technical results that confirm the desired properties for the novel shape suggested there.}
@@ -607,7 +607,7 @@ consciously confined the whole argumentation to a certain Bayesian setting:
 we studied how far one can go \emph{if} one relies strictly on the Generalised Bayes' Rule,
 transferring sets of priors to sets of posteriors element by element via Bayes' Rule \eqref{eq:bayesrule}.
 Considering the criticisms regarding the Generalised Bayes' Rule discussed in Section~\ref{sec:updating},
-alternative learning rules could thus provide superiour model behaviour.%
+alternative learning rules could thus provide superior model behaviour.%
 \footnote{In Section~\ref{sec:alternatives}, we discussed some of the approaches
 mentioned in footnote~\ref{foot:learningrules}, page~\pageref{foot:learningrules},
 that consider alternative learning rules.}
@@ -665,7 +665,7 @@ An approach beyond the Generalised Bayes' Rule that we studied in more detail
 is the weighting model from Section~\ref{sec:weightedinf}.
 As mentioned in Section~\ref{sec:concluding-discussion} above,
 it was motivated by the dual role of $\nz$ in the framework from Section~\ref{sec:basicsetting},
-controlling both posterior precision and derivation from prior assignments
+controlling both posterior precision and deviation from prior assignments
 that can lead to unintuitive results in case of strong prior data agreement (see Section~\ref{sec:ibbm-resume}).
 Another idea for models outside the generalised Bayesian framework
 related to the role of $\nz$ was discussed in Section~\ref{sec:insights},
