diss: typos Frank in appendix 2

--- a/appendix2.tex
+++ b/appendix2.tex
@@ -600,7 +600,7 @@ Then, basically everything should work the same as described above,
 except that for $y_c$ near to $0$ or $1$, one would have to take care to respect
 the bounds of the parameter space.
 Informally, we can also think of this as rotating the whole parameter space (the wedge)
-under the boat-set until its symmetry axis is alingned to $y_c$. 
+under the boat-set until its symmetry axis is aligned to $y_c$. 
 
 So far, we have only vague intuitions for the role of the parameters $a$ and $b$ that,
 together with $\ezl$ and $\ezu$, define the shape.
