diss: bibliography order fixed except walter

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -115,7 +115,7 @@
 }
 
 @INPROCEEDINGS{Walter2011a,
-  author = {Gero Walter and Thomas Augustin and Frank P.A. Coolen},
+  author = {Gero Walter and Thomas Augustin and Frank Coolen},
   longeditor = {Frank P. A. Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
   editor = {Frank Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
   year = 2011,
@@ -153,7 +153,7 @@
 
 @misc{Troffaes2013a,
     Longauthor = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
-    Author = {Matthias Troffaes and Gero Walter and Dana Kelly},
+    Author = {Troffaes, M. and Walter, G. and Kelly, D.},
     Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
     note = {Accepted for publication at: Reliability Engineering \& System Safety},
     Pages = {},
@@ -198,7 +198,7 @@
 
 @misc{luck-package,
   title={\texttt{\upshape luck}: \textbf{R} package for Generalized iLUCK-models},
-  author={Gero Walter and Norbert Krautenbacher},
+  author={Walter, Gero and Krautenbacher, Norbert},
   year={2013},
   url={http://luck.r-forge.r-project.org/},
   keywords = {defensethesis},
