--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -81,7 +81,7 @@
 }
 
 @book{1991:walley,
-  author = {Peter Walley},
+  author = {Walley, P.},
   title = {Statistical Reasoning with Imprecise Probabilities},
   publisher = {Chapman and Hall},
   address = {London},
@@ -91,7 +91,7 @@
 }
 
 @article{1996:walley::idm,
-  author = {Peter Walley},
+  author = {Walley, P.},
   title = {Inferences from multinomial data: Learning about a bag of marbles},
   journal = {Journal of the Royal Statistical Society, Series B},
   year = {1996},
@@ -208,7 +208,7 @@
   title = {Studies in Subjective Probability},
   publisher = {Wiley},
   year = {1964},
-  editor = {{Kyburg Jr.}, H. and Smokler, H.},
+  editor = {Kyburg, H. and Smokler, H.},
   address = {New York},
   note = {Second edition (with new material) 1980}
 }
@@ -430,7 +430,7 @@
 }
 
 @article{2006:utkin::expertjudgements,
-    Author = {L. Utkin},
+    Author = {Utkin, L.},
     Doi = {10.1016/j.ejor.2005.04.041},
     Issn = {0377-2217},
     Journal = {European Journal of Operational Research},
@@ -516,7 +516,7 @@
 
 @article{1993:coolen,
   longauthor = "Frank P. A. Coolen",
-  author = "Frank Coolen",
+  author = "Coolen, F.",
   title = "Imprecise conjugate prior densities for the one-parameter exponential family of distributions",
   journal = "Statistics \& Probability Letters",
   volume = "16",
@@ -613,7 +613,7 @@
 }
 
 @article{2007:held,
-    Author = {H. Held and E. Kriegler and T. Augustin},
+    Author = {Held, H. and Kriegler, E. and Augustin, T.},
     Fjournal = {Internat. J. Approx. Reason.},
     Journal = {International Journal of Approximate Reasoning},
     Title = {Bayesian Learning for a Class of Priors with Prescribed Marginals},
@@ -710,7 +710,7 @@
   title = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise
     Probabilities: Theories and Applications},
   year = {2011},
-  editor = {F. Coolen and G. de Cooman and Th. Fetz and M. Oberguggenberger},
+  editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
   address = {Innsbruck, Austria},
   organization = {SIPTA}
 }
@@ -802,7 +802,7 @@
 
 
 @incollection{itip-desirable,
-    author    = "Erik Quaeghebeur",
+    author    = "Quaeghebeur, E.",
     title     = "Desirability",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
@@ -882,7 +882,7 @@
 
 @incollection{itip-computation,
     longauthor    = "Matthias C. M. Troffaes and Robert Hable",
-    author    = "Matthias Troffaes and Robert Hable",
+    author    = "Troffaes, M. and Hable, R.",
     title     = "Computation",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
