--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -225,7 +225,7 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
 
 @inreference{2011:IESS-ip,
   longauthor = {Frank P. A. Coolen and Matthias M. C. Troffaes and Thomas Augustin},
-  author = {Frank Coolen and Matthias Troffaes and Thomas Augustin},
+  author = {Coolen, F. and Troffaes, M. and Augustin, T.},
   title = {Imprecise Probability},
   pages = {645--648},
   editor = {Lovric, Miodrag},
@@ -249,7 +249,7 @@ author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and
 
 @inreference{2011:IESS-npi,
   longauthor = {Frank P. A. Coolen},
-  author = {Frank Coolen},
+  author = {Coolen, F.},
   title = {Nonparametric Predictive Inference},
   pages = {968--970},
   editor = {Lovric, Miodrag},
@@ -393,15 +393,15 @@ Year = {1999}
      Year = {2007}}
 
 @inproceedings{2009:hampel:knowledge,
-    Author = {F. Hampel},
+    Author = {Hampel, F.},
     Booktitle = {ISIPTA '09: Proceedings of the Sixth International Symposium on Imprecise Probabilities: Theories and Applications},
-    Editor = {T. Augustin and F.P.A. Coolen and S. Moral and M.C.M. Troffaes},
+    Editor = {T. Augustin and F. Coolen and S. Moral and M. Troffaes},
     pages = {219--227},
     Title = {How can we get new knowledge?},
     Year = {2009}}
 
 @InProceedings{2007:held-isipta07,
-    author = {Herrman Held},
+    author = {Held, H.},
      title = {Quantile-Filtered {B}ayesian Learning for the Correlation Class},
  booktitle = {ISIPTA '07: Proceedings of the Fifth International Symposium on Imprecise Probabilities and Their Applications},
      pages = {223--232},
@@ -410,7 +410,7 @@ Year = {1999}
 }
 
 @book {2013:fahrmeier-kneib-lang-marx,
-    AUTHOR = {Fahrmeir, Ludwig and Kneib, Thomas and Lang, Stephan and Marx, Brian},
+    AUTHOR = {Fahrmeir, L. and Kneib, T. and Lang, S. and Marx, B.},
      TITLE = {Regression. Models, Methods and Applications},
  PUBLISHER = {Springer},
    ADDRESS = {New York},
@@ -418,7 +418,7 @@ Year = {1999}
 }
 
 @book {2001:fahrmeier-tutz,
-    AUTHOR = {Ludwig Fahrmeir and Gerhard Tutz},
+    AUTHOR = {Fahrmeir, L. and Tutz, G.},
      TITLE = {Multivariate Statistical Modelling Based on Generalized Linear Models},
       YEAR = {2001},
  PUBLISHER = {Springer},
@@ -426,7 +426,7 @@ Year = {1999}
 }
 
 @article{1985:fahrmeir-kaufmann,
-Author = {Fahrmeir, Ludwig and Kaufmann, H.},
+Author = {Fahrmeir, L. and Kaufmann, H.},
 Title = {Consistency and asymptotic normality of the maximum-likelihood estimator in generalized linear-models},
 Journal = {Annals of Statistics},
 Year = {1985},
@@ -464,7 +464,7 @@ Pages = {342--368},
 }
 
 @article {2009:fahrmeir,
-    AUTHOR = {Ludwig Fahrmeir and Thomas Kneib},
+    AUTHOR = {Fahrmeir, L. and Kneib, T.},
      TITLE = {Propriety of posteriors in structured additive regression models: Theory and empirical evidence},
    JOURNAL = {Journal of Statistical Planning and Inference},
     VOLUME = {139},
@@ -474,7 +474,7 @@ Pages = {342--368},
 }
 
 @article {2006:fahrmeir,
-    AUTHOR = {Ludwig Fahrmeir and Thomas Kneib},
+    AUTHOR = {Fahrmeir, L. and Kneib, T.},
      TITLE = {Structured additive regression for categorial space-time data: A mixed model approach},
    JOURNAL = {Biometrics},
     VOLUME = {62},
@@ -528,7 +528,7 @@ Pages = {342--368},
     editor = "Samuel Kotz and Norman Johnson and Campbell Read",
  booktitle = "Encyclopedia of Statistical Sciences",
      title = "Logic of Statistical Reasoning",
-    author = "Henry Kyburg",
+    author = "Kyburg, H.",
     volume = "5",
  publisher = "Wiley-In{\-}ter{\-}sci{\-}ence",
    address = "New York",
@@ -577,7 +577,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 }
 
 @inproceedings{2013:troffaes:goldstein,
-    Author = {Matthias Troffaes and Michael Goldstein},
+    Author = {Troffaes, M. and Goldstein, M.},
     Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
     pages = {319--328},
@@ -613,7 +613,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Year = {2013}}
 
 @phdthesis{2011:rinderknecht:diss,
-    Author = {Simon Rinderknecht},
+    Author = {Rinderknecht, S.},
     School = {ETH Z\"urich},
     Title = {Contribution to the Use of Imprecise Scientific Knowledge in Decision Support},
     Url = {http://dx.doi.org/10.3929/ethz-a-007313975}, 
@@ -630,7 +630,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 
 @inproceedings{2011:utkin,
   title={Interval-valued regression and classification models in the framework of machine learning},
-  author={Utkin, Lev and Coolen, Frank},
+  author={Utkin, L. and Coolen, F.},
   booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise Probability: Theories and Applications},
   editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
   pages={371--380},
@@ -641,7 +641,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 }
 
 @inproceedings{2013:utkin-wiencierz,
-    Author = {Lev Utkin and Andrea Wiencierz},
+    Author = {Utkin, L. and Wiencierz, A.},
     Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
     pages = {345--354},
@@ -650,7 +650,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Year = {2013}}
 
 @inproceedings{2013:troffaes-blake,
-    Author = {Matthias Troffaes and Simon Blake},
+    Author = {Troffaes, M. and Blake, S.},
     Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
     pages = {311--317},
@@ -660,7 +660,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 
 @article{2010:utkin,
   title={Regression analysis using the imprecise Bayesian normal model},
-  author={Lev Utkin},
+  author={Utkin, L.},
   journal={International Journal of Data Analysis Techniques and Strategies},
   volume={2},
   pages={356--372},
@@ -669,7 +669,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 
 @inproceedings{2011:hampel,
   title={Potential Surprises},
-  author={Frank Hampel},
+  author={Hampel, F.},
   booktitle = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise Probability: Theories and Applications},
   editor = {Coolen, F. and de Cooman, G. and Fetz, T. and Oberguggenberger, M.},
   pages={199--207},
